add extensions supported logo restaurant.